<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="edu.westga.cs6242.wordjumble.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="#092a53">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_new_game"
        android:id="@+id/btnStartGame"
        android:onClick="click_StartNewWordJumbleGame"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="20sp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/radioGroup"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/five_letter_game"
            android:id="@+id/rbFiveLetterGame"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custom_radio"
            android:button="@android:color/transparent"
            android:padding="15dp"
            android:textColor="#240105" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six_letter_game"
            android:id="@+id/rbSixLetterGame"
            android:checked="false"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_radio"
            android:button="@android:color/transparent"
            android:padding="15dp"/>

    </RadioGroup>

</RelativeLayout>
